
    o	option("pdfbrowser") is now set on Windows as well as on Unix-alikes.

    o	object.size() now returns an object of class "object_size" and
    	has a print() method.

    o	[col/row]Sums(), *Means() now have an additional '...' argument,
	so that they can more easily be turned into generic functions.

    o	Package 'tools' contains dependsOnPkgs() to compute reverse
	dependencies.


DEPRECATED & DEFUNCT

    o	allGenerics() is defunct.

    o	Use of allocVector(CHARSXP ...) is defunct and gives an error.

    o	The compatibility define for graphics structure NewDevDesc in
	GraphicsDevice.h has been removed.

    o	Support for versioned installs (R CMD INSTALL --with-package-versions
	and install.packages(installWithVers = TRUE)) has been removed.

    o	The numeric and power(0.5) forms of argument to make.link()
	which were deprecated in 2.4.0 are now defunct: use power()
	directly.

    o	Conversion to Sd and Ssgm by R CMD Rdconv is now defunct.	


UTILITIES

    o	R CMD build now also uses a Makevars[.win] file for cleaning
	up src/.

    o	R CMD Rd2dvi and R CMD check are now able to cope with Cyrillic
	characters in UTF-8 (thanks to a hint from Alexey Shipunov).

    o	New function rtags() in package 'utils' that provides etags-like
	indexing capabilities for R code files.

	New front-end script R CMD rtags provides an interface to the
	rtags() function (see R CMD rtags --help for details).

    o	New environment variable R_TEXI2DVICMD to hold the path (if any)
	to 'texi2dvi' found at configure time: this now provides the
	default to option("texi2dvi").

    o	massage-Examples.pl has been replaced by an R script
	share/R/massage-examples.R .

    o	R CMD REMOVE now uses remove.packages() and hence removes all
	members of a bundle.


Rd CONVERSION

    o	Rd files have an optional \Rdversion{} section, which if
	missing defaults to 1.0.  There is support for version 1.1, a
	slightly modified version with the following changes:
